--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -30,3 +30,7 @@ sphinx:
 # python:
 #    install:
 #    - requirements: docs/requirements.txt
+
+# The theme to use for HTML and HTML Help pages.  See the documentation for
+# a list of builtin themes.
+html_theme = 'sphinx_rtd_theme'
