--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -33,4 +33,5 @@ sphinx:
 
 # The theme to use for HTML and HTML Help pages.  See the documentation for
 # a list of builtin themes.
-html_theme = 'sphinx_rtd_theme'
+#
+html_theme = 'furo'
