--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -27,9 +27,12 @@ sphinx:
 # Optional but recommended, declare the Python requirements required
 # to build your documentation
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
-# python:
-#    install:
-#    - requirements: docs/requirements.txt
+python:
+  version: 3.12
+  install:
+    - requirements: docs/requirements.txt
+    - method: pip
+      path: .
 
 # The theme to use for HTML and HTML Help pages.  See the documentation for
 # a list of builtin themes.
