--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,11 @@
 [build-system]
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[project.optional-dependencies]
+doc = [
+    "pydot >= 1.2.3",
+    "sphinx >= 5",
+    "sphinx-argparse",
+    "sphinx_rtd_theme>=0.5.2",
+]
