--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project.optional-dependencies]
 doc = [
-    "pydot >= 1.2.3",
     "sphinx >= 5",
     "sphinx-argparse",
-    "sphinx_rtd_theme>=0.5.2",
+    "sphinx_rtd_theme>=0.5.2"
 ]
