--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,9 +24,10 @@ dependencies = [
 
 [project.optional-dependencies]
 doc = [
+    "pydot >= 1.2.3",
     "sphinx >= 5",
     "sphinx-argparse",
-    "sphinx_rtd_theme >= 0.5.2"
+    "sphinx_rtd_theme>=0.5.2",
 ]
 
 [project.urls]
